--- a/TOOLS/NEOS_CAN_ADAPTER/SRC/WINDOWS/CAN_SNIFFER/NEOS_CAN_SNIFFER.csproj
+++ b/TOOLS/NEOS_CAN_ADAPTER/SRC/WINDOWS/CAN_SNIFFER/NEOS_CAN_SNIFFER.csproj
@@ -1,4 +1,5 @@
-﻿<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<?xml version="1.0" encoding="utf-8"?>
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -9,6 +10,27 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CAN_SNIFFER</RootNamespace>
     <AssemblyName>NEOS_CAN_SNIFFER</AssemblyName>
+    <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <FileUpgradeFlags>
+    </FileUpgradeFlags>
+    <UpgradeBackupLocation>
+    </UpgradeBackupLocation>
+    <OldToolsVersion>2.0</OldToolsVersion>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -18,6 +40,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -32,14 +55,6 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>.\FTD2XX_NET.dll</HintPath>
     </Reference>
-    <Reference Include="NationalInstruments.Common, Version=8.1.20.618, Culture=neutral, PublicKeyToken=4544464cdeaab541, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-    </Reference>
-    <Reference Include="NationalInstruments.UI, Version=8.1.20.472, Culture=neutral, PublicKeyToken=4544464cdeaab541, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="NationalInstruments.UI.WindowsForms, Version=8.1.20.472, Culture=neutral, PublicKeyToken=4544464cdeaab541" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
@@ -73,12 +88,6 @@
     <Compile Include="IncomingCANMessageView.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MessageRouterControl.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MessageRouterControl.Designer.cs">
-      <DependentUpon>MessageRouterControl.cs</DependentUpon>
-    </Compile>
     <Compile Include="NEOSMessages.cs" />
     <Compile Include="SnifferMain.cs">
       <SubType>Form</SubType>
@@ -99,10 +108,6 @@
     <EmbeddedResource Include="NEOSLowLevelCtrl.resx">
       <SubType>Designer</SubType>
       <DependentUpon>NEOSLowLevelCtrl.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="MessageRouterControl.resx">
-      <SubType>Designer</SubType>
-      <DependentUpon>MessageRouterControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -131,6 +136,29 @@
     <Compile Include="SystemMessageView.cs">
       <SubType>Form</SubType>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="lib\LBIndustrialCtrls\LBIndustrialCtrls.csproj">
+      <Project>{B4218BC9-9736-42B9-BC99-7903FDBEBA28}</Project>
+      <Name>LBIndustrialCtrls</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
+      <Install>false</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
+    <BootstrapperPackage Include="Microsoft.Windows.Installer.3.1">
+      <Visible>False</Visible>
+      <ProductName>Windows Installer 3.1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
